--- a/CN/cncheatsheet.tex
+++ b/CN/cncheatsheet.tex
@@ -5,7 +5,7 @@
 \input{smallpacco}
 \usepackage{utfsym}
 
-\title{La Madonna Puttana: Complex Networks Cheatsheet}
+\title{Complex Networks Cheatsheet}
 \author{\usym{1F3BC}\;Kotatsu, the Bringer of Jazz\;\usym{1F3B9}}
 \date{\today}
 
