--- a/IDM/idmcheatsheet.tex
+++ b/IDM/idmcheatsheet.tex
@@ -5,7 +5,7 @@
 
 
 \title{Il Diocane: Introduction to Data Mining Cheatsheet}
-\author{\faSynagogue\;Kotatsu, the Bringer of Jewishness\;\faMenorah}
+\author{\faSynagogue\;Kotatsu}
 \date{\today}
 
 
