--- a/IDM/progetto.ipynb
+++ b/IDM/progetto.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "eab65a0b",
    "metadata": {},
    "outputs": [],
@@ -249,8 +249,7 @@
     "        class_names=y.unique(), \n",
     "        feature_names=list(x),\n",
     "        fontsize=5\n",
-    "            )\n",
-    "    plt.savefig(\"albero_grande.png\", dpi=300, bbox_inches='tight')"
+    "            )"
    ]
   },
   {
@@ -634,44 +633,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "id": "d6180743",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Chord  Train Accuracy  Train Precision  Train Recall  Train F1  \\\n",
-      "0            Major        0.677966         0.962748      0.467820  0.629670   \n",
-      "1            Minor        0.829567         0.907240      0.369926  0.525557   \n",
-      "2      Dominant7th        0.935734         0.657407      0.231270  0.342169   \n",
-      "3      Diminished6        0.998823         0.500000      0.200000  0.285714   \n",
-      "4           Minor6        0.988936         0.727273      0.280702  0.405063   \n",
-      "5           Minor7        0.974341         0.727273      0.134454  0.226950   \n",
-      "6           Major6        0.997175         0.666667      0.285714  0.400000   \n",
-      "7         Sus4_maj        0.984934         0.631579      0.173913  0.272727   \n",
-      "8       Diminished        0.986582         0.777778      0.208955  0.329412   \n",
-      "9   HalfDiminished        0.993644         0.761905      0.421053  0.542373   \n",
-      "10        Sus4_min        0.999294         0.333333      0.500000  0.400000   \n",
-      "\n",
-      "    Test Accuracy  Test Precision  Test Recall   Test F1  \n",
-      "0        0.667608        0.933168     0.459196  0.615510  \n",
-      "1        0.813691        0.800000     0.379404  0.514706  \n",
-      "2        0.930840        0.500000     0.153061  0.234375  \n",
-      "3        0.999294        0.000000     0.000000  0.000000  \n",
-      "4        0.985180        0.166667     0.058824  0.086957  \n",
-      "5        0.969654        0.600000     0.068182  0.122449  \n",
-      "6        0.995060        0.000000     0.000000  0.000000  \n",
-      "7        0.976006        0.416667     0.156250  0.227273  \n",
-      "8        0.983063        0.444444     0.173913  0.250000  \n",
-      "9        0.996471        1.000000     0.444444  0.615385  \n",
-      "10       0.998589        0.000000     0.000000  0.000000  \n"
+     "ename": "NameError",
+     "evalue": "name 'chord_ripper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m display(\u001b[43mchord_ripper\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'chord_ripper' is not defined"
      ]
     }
    ],
    "source": [
-    "print(chord_ripper)"
+    "display(chord_ripper)"
    ]
   },
   {
