--- a/ANB/paccoan.sty
+++ b/ANB/paccoan.sty
@@ -570,7 +570,7 @@
 									\newcommand{\mFt}{\mathcal{F}_t}
 									\newcommand{\every}{\forall\,}
 									\newcommand{\dyadic}{\mathcal{d}}
-									\newcommand{\norm}[1]{\left|\negthinspace\left|#1\right|\negthinspace\right|}
+									\newcommand{\norm}[1]{\left|\left|#1\right|\right|}
 		\newcommand{\pr}{\mathbb{P}}
 		\newcommand{\dnorm}{\norm{\cdot}}
 		\newcommand{\indi}{\mathbb{1}}
